# payment-gateway-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose-cache.json  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml
src/core/: config.py  db.py  dependencies.py  event_bus.py  fastapi.py  logging.py  models.py
src/core/db/: config.py  dependencies.py  fields.py  sql_db.py
src/core/outbox/: event.py  model.py  processor.py  sql_outbox.py
src/db/: config.py  dependencies.py  fields.py  models.py
src/features/: create_checkout.py  models.py  payments_router.py
src/features/health/: routes.py
src/health/: endpoints.py  schemas.py
src/migrations/: alembic.ini  env.py
tests/: conftest.py  test_create_checkout.py
tests/core/: test_config.py  test_db.py
tests/db/: test_config.py
tests/fixtures/: clients.py
tests/health/: test_endpoints.py
