[tool.poetry]
name = "payment-gateway"
version = "0.1.0"
description = "Payment Gateway APP"
authors = ["Czaku"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
schedule = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
