[tool.poetry]
name = "payment-gateway"
version = "0.1.0"
description = "Payment Gateway APP"
authors = ["Czaku"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
alembic = "^1.13.1"
pre-commit = "^3.7.0"
sqlalchemy = {version = "^2.0.29", extras = ["asyncio", "postgresql-psycopgbinary"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"
black = "^24.4.0"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # Ignore pydocstyle checks
    "UP040",   # Checks for use of TypeAlias annotation for declaring type aliases
    "CPY001",  # Missing copyright notice at top of file
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**values`
    "COM812",  # Checks for the absence of trailing commas
    "ISC001",  # Checks for implicitly concatenated strings on a single line
    "FIX002",  # Line contains TODO, consider resolving the issue
    "TCH001",  # first-party imports used only for type annotations not defined in a type-checking block
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # Use of assert detected
    "S105",     # Possible hardcoded password
    "S106",     # Possible hardcoded password
    "PLR0913",  # Too many arguments in function definition
    "PLR0917",  # Too many positional arguments in function call
    "PLR2004",  # Magic value used in comparison
    "PLR6301",  # Method could be a function or static method
    "FBT001",   # Boolean-typed positional argument in function definition
]
"**/{dependencies,endpoints,schemas}*" = [
    "TCH001",  # first-party imports used only for type annotations not defined in a type-checking block
    "TCH002",  # third-party imports used only for type annotations not defined in a type-checking block
    "TCH003",  # standard library imports used only for type annotations not defined in a type-checking block
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["sqlalchemy.orm.declared_attr.directive"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
    "src.core.models.Base",
]

[tool.mypy]
strict = true
enable_error_code = [
    "explicit-override",
]
plugins = [
    "pydantic.mypy",
]

ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "**/tests/*",
    "src/migrations/*",
    "src/db/fields.py",
    "src/db/models.py",
]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "\\.\\.\\.$",
]
